--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li>mira 34</li>
       <li>mira 90</li>
       <li>pastera 56</li>
-      <li>pastera 56b</li>
+      <li>pastera 56c</li>
     </ul>
   </body>
 </html>
