pastera 4 aws added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li>mira 90</li>
       <li>pastera 56</li>
       <li>pastera 56c</li>
+      <li>pastera 4</li>
     </ul>
   </body>
 </html>
